[package]
name = "proc-lineq"
version = "0.1.0"
authors = ["Ryan Jennings <ryan@ryanj.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = "1.0"

[dev-dependencies]
quote = "1.0"
proc-lineq-derive = { path = "proc-lineq-derive"}
